# test_vla_rollout

./: .gitignore  pyproject.toml  test_openvla.ipynb
env/: libero_env.py  libero_utils.py
