[project]
name = "test-rollout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bddl==1.0.1",
    "cloudpickle==2.1.0",
    "easydict==1.9",
    "einops==0.4.1",
    "future==0.18.2",
    "gym==0.25.2",
    "hydra-core==1.2.0",
    "ipykernel>=6.30.1",
    "libero",
    "matplotlib==3.5.3",
    "opencv-python==4.6.0.66",
    "openvla-oft",
    "pandas>=2.3.2",
    "robomimic==0.2.0",
    "robosuite==1.4.0",
    "thop==0.1.1.post2209072238",
    "timm<=1.0.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "transformers==4.55.4",
    "vllm==0.10.0",
    "wandb==0.13.1",
]

[tool.uv.sources]
libero = { path = "../LIBERO", editable = true }
openvla-oft = { path = "../openvla-oft", editable = true }
